--- a/src/fonts/fontello/css/frast.css
+++ b/src/fonts/fontello/css/frast.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'frast';
-  src: url('../font/frast.eot?65390508');
-  src: url('../font/frast.eot?65390508#iefix') format('embedded-opentype'),
-       url('../font/frast.woff?65390508') format('woff'),
-       url('../font/frast.ttf?65390508') format('truetype'),
-       url('../font/frast.svg?65390508#frast') format('svg');
+  src: url('../font/frast.eot?4614559');
+  src: url('../font/frast.eot?4614559#iefix') format('embedded-opentype'),
+       url('../font/frast.woff?4614559') format('woff'),
+       url('../font/frast.ttf?4614559') format('truetype'),
+       url('../font/frast.svg?4614559#frast') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'frast';
-    src: url('../font/frast.svg?65390508#frast') format('svg');
+    src: url('../font/frast.svg?4614559#frast') format('svg');
   }
 }
 */
@@ -35,7 +35,7 @@
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+ 
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
  
@@ -46,8 +46,16 @@
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
  
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
 .icon-github:before { content: '\e800'; } /* '' */
+.icon-twitter:before { content: '\e801'; } /* '' */
+.icon-instagram:before { content: '\e802'; } /* '' */
+.icon-soundcloud:before { content: '\e803'; } /* '' */
+.icon-rss:before { content: '\e804'; } /* '' */
