--- a/src/stylesheet/stylesheet.less
+++ b/src/stylesheet/stylesheet.less
@@ -1,4 +1,327 @@
-/* Beauty starts here... */
+@import (inline) 'inc/reset.css';
 
-// If any sprite
-// @import (sprites/sprite.less);
+// breakpoints
+@breakpoint-large: 1170px;
+@breakpoint-small: 768px;
+
+// color
+@bg-color: #e9f0f5;
+@color: #7f8c97;
+@link-color: #36f;
+@link-hover: #00f;
+
+
+
+html * {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 100%;
+  font-family: "Droid Serif", serif;
+  color: @color;
+  background-color: @bg-color;
+}
+
+a {
+  color: @link-color;
+  text-decoration: none;
+  &:hover {
+    color: @link-hover;
+    text-decoration: underline;
+  }
+}
+
+img {
+  max-width: 100%;
+}
+
+h1, h2 {
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
+}
+
+/* --------------------------------
+
+Modules - reusable parts of our design
+
+-------------------------------- */
+.container {
+  width: 90%;
+  max-width: @breakpoint-large;
+  margin: 0 auto;
+  &::after {
+    content: '';
+    display: table;
+    clear: both;
+  }
+}
+
+header {
+  text-align: center;
+  background: #303e49;
+  background: #36f;
+  padding: 1em 0;
+  h1 {
+    color: white;
+    font-size: 18px;
+    font-size: 1.125rem;
+  }
+  @media only screen and (min-width: @breakpoint-large) {
+      padding: 2em 0;
+      h1 {
+        font-size: 24px;
+        font-size: 1.5rem;
+      }
+  }
+}
+
+footer {
+  padding: 1em;
+  text-align: center;
+  background: #303e49;
+  line-height: 1.4em;
+  font-size: .85em;
+  @media only screen and (min-width: @breakpoint-large) {
+      padding: 3em 0;
+  }
+  a {
+    color: #ddd;
+    text-decoration: underline;
+    &:hover {
+      color: #fff;
+    }
+  }
+}
+
+#timeline {
+  position: relative;
+  margin-bottom: 1em;
+  margin-top: 2em;
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 18px;
+    height: 100%;
+    width: 4px;
+    background: #d7e4ed;
+  }
+  @media only screen and (min-width: @breakpoint-large) {
+    margin-bottom: 3em;
+    &::before {
+      left: 50%;
+      margin-left: -2px;
+    }
+  }
+}
+
+.timeline-block {
+  position: relative;
+  margin: 2em 0;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  &:first-child {
+    margin-top: 0;
+  }
+  &:last-child {
+    margin-bottom: 0;
+  }
+  @media only screen and (min-width: @breakpoint-large) {
+    .timeline-block {
+      margin: 4em 0;
+    }
+  }
+  &.source-soundcloud {
+    text-align: center;
+    img {
+      margin-top: 1em;
+    }
+  }
+}
+
+.timeline-img {
+  @size: 40px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: @size;
+  height: @size;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
+  text-align: center;
+  line-height: @size;
+  i {
+    font-size: @size * .55;
+    color: #fff;
+  }
+  &.twitter {
+    background: #55acee;
+  }
+  &.instagram {
+    background: #3f729b;
+  }
+  &.rss {
+    background: #ff8800;
+  }
+  &.soundcloud {
+    background: #ff3300;
+  }
+  @media only screen and (min-width: @breakpoint-large) {
+    @size: 60px;
+    width: @size;
+    height: @size;
+    line-height: @size;
+    left: 50%;
+    margin-left: -1 * (@size/2);
+    i{
+      font-size: @size * .55;
+    }
+  }
+}
+
+.timeline-content {
+  position: relative;
+  margin-left: 60px;
+  background: white;
+  border-radius: 0.25em;
+  padding: 1em;
+  box-shadow: 0 3px 0 #d7e4ed;
+  &:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  h2 {
+    color: #303e49;
+  }
+  a {
+    color: #303e49;
+  }
+  .content, .read-more, .date {
+    font-size: 13px;
+    font-size: 0.8125rem;
+  }
+  .read-more, .date {
+    display: inline-block;
+  }
+  .content {
+    margin: 1em 0;
+    line-height: 1.6;
+  }
+  .read-more {
+    float: right;
+    padding: .8em 0;
+  }
+  .date {
+    float: left;
+    padding: .8em 0;
+    opacity: .7;
+  }
+  &::before {
+    content: '';
+    position: absolute;
+    top: 16px;
+    right: 100%;
+    height: 0;
+    width: 0;
+    border: 7px solid transparent;
+    border-right: 7px solid white;
+  }
+  @media only screen and (min-width: @breakpoint-small) {
+    h2 {
+      font-size: 20px;
+      font-size: 1.25rem;
+    }
+    .content {
+      font-size: 16px;
+      font-size: 1rem;
+    }
+    .read-more, .date {
+      font-size: 14px;
+      font-size: 0.875rem;
+    }
+  }
+  @media only screen and (min-width: @breakpoint-large) {
+    margin-left: 0;
+    padding: 1.6em;
+    width: 45%;
+    &::before {
+      top: 24px;
+      left: 100%;
+      border-color: transparent;
+      border-left-color: white;
+    }
+    .read-more {
+      float: left;
+    }
+    .date {
+      position: absolute;
+      width: 100%;
+      left: 122%;
+      top: 6px;
+      font-size: 16px;
+      font-size: 1rem;
+    }
+  }
+}
+
+@media only screen and (min-width: @breakpoint-large) {
+  .timeline-content {
+    margin-left: 0;
+    padding: 1.6em;
+    width: 45%;
+    &::before {
+      top: 24px;
+      left: 100%;
+      border-color: transparent;
+      border-left-color: white;
+    }
+    .read-more {
+      float: left;
+    }
+    .date {
+      position: absolute;
+      width: 100%;
+      left: 122%;
+      top: 6px;
+      font-size: 16px;
+      font-size: 1rem;
+    }
+  }
+  .timeline-block:nth-child(even) .timeline-content {
+    float: right;
+  }
+  .timeline-block:nth-child(even) .timeline-content::before {
+    top: 24px;
+    left: auto;
+    right: 100%;
+    border-color: transparent;
+    border-right-color: white;
+  }
+  .timeline-block:nth-child(even) .timeline-content .read-more {
+    float: right;
+  }
+  .timeline-block:nth-child(even) .timeline-content .date {
+    left: auto;
+    right: 122%;
+    text-align: right;
+  }
+}
+
+.message {
+  padding: 1em;
+  text-align: center;
+  &.error {
+    background: #fee;
+    color: red;
+  }
+}
