Add spin icon for loading message

--- a/src/fonts/fontello/css/frast-codes.css
+++ b/src/fonts/fontello/css/frast-codes.css
@@ -4,3 +4,5 @@
 .icon-instagram:before { content: '\e802'; } /* '' */
 .icon-soundcloud:before { content: '\e803'; } /* '' */
 .icon-rss:before { content: '\e804'; } /* '' */
+.icon-foursquare:before { content: '\e805'; } /* '' */
+.icon-spin:before { content: '\e809'; } /* '' */
