--- a/src/fonts/fontello/css/frast.css
+++ b/src/fonts/fontello/css/frast.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'frast';
-  src: url('../font/frast.eot?4614559');
-  src: url('../font/frast.eot?4614559#iefix') format('embedded-opentype'),
-       url('../font/frast.woff?4614559') format('woff'),
-       url('../font/frast.ttf?4614559') format('truetype'),
-       url('../font/frast.svg?4614559#frast') format('svg');
+  src: url('../font/frast.eot?21063240');
+  src: url('../font/frast.eot?21063240#iefix') format('embedded-opentype'),
+       url('../font/frast.woff?21063240') format('woff'),
+       url('../font/frast.ttf?21063240') format('truetype'),
+       url('../font/frast.svg?21063240#frast') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'frast';
-    src: url('../font/frast.svg?4614559#frast') format('svg');
+    src: url('../font/frast.svg?21063240#frast') format('svg');
   }
 }
 */
@@ -59,3 +59,5 @@
 .icon-instagram:before { content: '\e802'; } /* '' */
 .icon-soundcloud:before { content: '\e803'; } /* '' */
 .icon-rss:before { content: '\e804'; } /* '' */
+.icon-foursquare:before { content: '\e805'; } /* '' */
+.icon-spin:before { content: '\e809'; } /* '' */
