--- a/src/stylesheet/stylesheet.less
+++ b/src/stylesheet/stylesheet.less
@@ -124,6 +124,9 @@ footer {
 .timeline-block {
   position: relative;
   margin: 2em 0;
+  img {
+    margin-top: 1em;
+  }
   &:after {
     content: "";
     display: table;
@@ -142,9 +145,6 @@ footer {
   }
   &.source-soundcloud {
     text-align: center;
-    img {
-      margin-top: 1em;
-    }
   }
 }
 
@@ -174,6 +174,9 @@ footer {
   }
   &.soundcloud {
     background: #ff3300;
+  }
+  &.foursquare {
+    background: #f94877;
   }
   @media only screen and (min-width: @breakpoint-large) {
     @size: 60px;
