Fix theme color to match Tilap.net, add author footer mention

--- a/src/stylesheet/stylesheet.less
+++ b/src/stylesheet/stylesheet.less
@@ -5,10 +5,10 @@
 @breakpoint-small: 768px;
 
 // color
-@bg-color: #e9f0f5;
+@bg-color: #F1EBDD;
 @color: #7f8c97;
 @link-color: #36f;
-@link-hover: #00f;
+@link-hover: ##38B49D;
 
 
 
@@ -64,8 +64,7 @@ Modules - reusable parts of our design
 
 header {
   text-align: center;
-  background: #303e49;
-  background: #36f;
+  background: #38B49D;
   padding: 1em 0;
   h1 {
     color: white;
@@ -110,7 +109,7 @@ footer {
     left: 18px;
     height: 100%;
     width: 4px;
-    background: #d7e4ed;
+    background: darken(@bg-color, 10%);
   }
   @media only screen and (min-width: @breakpoint-large) {
     margin-bottom: 3em;
